--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/1-gallery.html" />
-    <load src="./partials/2-form.html" />
+    <load src="./public/1-gallery.html" />
+    <load src="./public/2-form.html" />
 
     <script src="./js/1-gallery.js" type="module"></script>
     <script src="./js/2-form.js" type="module"></script>
