--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./public/1-gallery.html" />
-    <load src="./public/2-form.html" />
-
-    <script src="./js/1-gallery.js" type="module"></script>
-    <script src="./js/2-form.js" type="module"></script>
-    <!-- <script type="module" src="./main.js"></script> -->
+    <div class="nav-container">
+      <a class="navigation main-nav" href="./public/1-gallery.html">Gallery</a>
+      <a class="navigation main-nav" href="./public/2-form.html">Form</a>
+    </div>
   </body>
 </html>
