--- a/src/public/1-gallery.html
+++ b/src/public/1-gallery.html
@@ -1,1 +1,14 @@
-<ul class="gallery"></ul>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <p><a class="navigation" href="../index.html">Go back</a></p>
+    <ul class="gallery"></ul>
+    <script src="../js/1-gallery.js" type="module"></script>
+  </body>
+</html>
