--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="nav-container">
-      <a class="navigation main-nav" href="/1-gallery.html">Gallery</a>
-      <a class="navigation main-nav" href="/2-form.html">Form</a>
+      <a class="navigation main-nav" href="./1-gallery.html">Gallery</a>
+      <a class="navigation main-nav" href="./2-form.html">Form</a>
     </div>
   </body>
 </html>
