--- a/src/2-form.html
+++ b/src/2-form.html
@@ -21,6 +21,6 @@
         <button class="btn-submit" type="submit">Submit</button>
       </div>
     </form>
-    <script src="../js/2-form.js" type="module"></script>
+    <script src="./js/2-form.js" type="module"></script>
   </body>
 </html>
