--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -9,6 +9,6 @@
   <body>
     <p><a class="navigation" href="../index.html">Go back</a></p>
     <ul class="gallery"></ul>
-    <script src="../js/1-gallery.js" type="module"></script>
+    <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
