--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p><a class="navigation" href="../index.html">Go back</a></p>
+    <p><a class="navigation" href="./index.html">Go back</a></p>
     <ul class="gallery"></ul>
     <script src="./js/1-gallery.js" type="module"></script>
   </body>
