--- a/src/2-form.html
+++ b/src/2-form.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p><a class="navigation" href="../index.html">Go back</a></p>
+    <p><a class="navigation" href="./index.html">Go back</a></p>
     <form class="feedback-form" autocomplete="off">
       <div class="form-container">
         <label class="email">
